Colaboratory를 통해 생성됨

--- a/f_6_MNIST_keras.ipynb
+++ b/f_6_MNIST_keras.ipynb
@@ -51,11 +51,7 @@
       "metadata": {
         "id": "-AQRftuEqGqx",
         "colab_type": "code",
-        "outputId": "e8016543-7f98-49b9-fe8f-a9e17e5b472a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -63,41 +59,20 @@
         "from keras.utils import to_categorical"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
         "id": "vRUwM8gvqToI",
         "colab_type": "code",
-        "outputId": "633a8b46-4e68-48df-936d-6d149884fd46",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
@@ -143,7 +118,7 @@
       "metadata": {
         "id": "ZF7JkSQvrYAj",
         "colab_type": "code",
-        "outputId": "4df6de43-d982-4ffc-9175-f2de167b5fbb",
+        "outputId": "c5bd8982-9166-4770-a766-4dab3a5753f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 422
@@ -168,7 +143,7 @@
         "model.summary()\n",
         "          "
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,21 +151,21 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_1 (Conv2D)            (None, 26, 26, 32)        320       \n",
+            "conv2d_4 (Conv2D)            (None, 26, 26, 32)        320       \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_1 (MaxPooling2 (None, 13, 13, 32)        0         \n",
+            "max_pooling2d_3 (MaxPooling2 (None, 13, 13, 32)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_2 (Conv2D)            (None, 11, 11, 64)        18496     \n",
+            "conv2d_5 (Conv2D)            (None, 11, 11, 64)        18496     \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_2 (MaxPooling2 (None, 5, 5, 64)          0         \n",
+            "max_pooling2d_4 (MaxPooling2 (None, 5, 5, 64)          0         \n",
             "_________________________________________________________________\n",
-            "conv2d_3 (Conv2D)            (None, 3, 3, 64)          36928     \n",
+            "conv2d_6 (Conv2D)            (None, 3, 3, 64)          36928     \n",
             "_________________________________________________________________\n",
-            "flatten_1 (Flatten)          (None, 576)               0         \n",
+            "flatten_2 (Flatten)          (None, 576)               0         \n",
             "_________________________________________________________________\n",
-            "dense_1 (Dense)              (None, 64)                36928     \n",
+            "dense_3 (Dense)              (None, 64)                36928     \n",
             "_________________________________________________________________\n",
-            "dense_2 (Dense)              (None, 10)                650       \n",
+            "dense_4 (Dense)              (None, 10)                650       \n",
             "=================================================================\n",
             "Total params: 93,322\n",
             "Trainable params: 93,322\n",
@@ -230,7 +205,7 @@
       "metadata": {
         "id": "FWsfipcXu20x",
         "colab_type": "code",
-        "outputId": "03163a5a-a475-4335-8000-5e06bc6de538",
+        "outputId": "731c6a1b-01e4-4adb-b86c-7d727c331212",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 210
@@ -240,21 +215,21 @@
       "source": [
         "model.fit(train_images, train_labels, epochs=5, batch_size=64)"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "60000/60000 [==============================] - 16s 263us/step - loss: 0.1690 - acc: 0.9470\n",
+            "60000/60000 [==============================] - 12s 198us/step - loss: 0.1906 - acc: 0.9398\n",
             "Epoch 2/5\n",
-            "60000/60000 [==============================] - 11s 186us/step - loss: 0.0491 - acc: 0.9844\n",
+            "60000/60000 [==============================] - 12s 207us/step - loss: 0.0501 - acc: 0.9849\n",
             "Epoch 3/5\n",
-            "60000/60000 [==============================] - 11s 185us/step - loss: 0.0333 - acc: 0.9897\n",
+            "60000/60000 [==============================] - 11s 181us/step - loss: 0.0354 - acc: 0.9889\n",
             "Epoch 4/5\n",
-            "60000/60000 [==============================] - 10s 173us/step - loss: 0.0257 - acc: 0.9920\n",
+            "60000/60000 [==============================] - 10s 175us/step - loss: 0.0257 - acc: 0.9921\n",
             "Epoch 5/5\n",
-            "60000/60000 [==============================] - 11s 183us/step - loss: 0.0198 - acc: 0.9941\n"
+            "60000/60000 [==============================] - 12s 200us/step - loss: 0.0209 - acc: 0.9933\n"
           ],
           "name": "stdout"
         },
@@ -262,13 +237,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f2812b03978>"
+              "<keras.callbacks.History at 0x7f281298a2e8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 15
         }
       ]
     },
@@ -276,7 +251,7 @@
       "metadata": {
         "id": "H4MhJEoUvCm0",
         "colab_type": "code",
-        "outputId": "48fe9bb4-83c9-4ba7-b8b5-0db35dd4d75b",
+        "outputId": "90db00cf-0c54-4f6f-9fd5-169d46486073",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -287,12 +262,12 @@
         "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
         "test_acc"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "10000/10000 [==============================] - 1s 105us/step\n"
+            "10000/10000 [==============================] - 1s 127us/step\n"
           ],
           "name": "stdout"
         },
@@ -300,13 +275,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9911"
+              "0.9922"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 16
         }
       ]
     },
@@ -314,7 +289,7 @@
       "metadata": {
         "id": "snRNbW4dv7cF",
         "colab_type": "code",
-        "outputId": "80e0987b-14fe-4a31-8ce9-4b6f11d85273",
+        "outputId": "6b0e8bd0-c40d-4651-ca9e-9cad0dda993d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
@@ -324,7 +299,7 @@
       "source": [
         "!ls -al"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
