15주차 과제제출 - 주석

--- a/f_8_cats_and_dogs_transfer.ipynb
+++ b/f_8_cats_and_dogs_transfer.ipynb
@@ -103,7 +103,7 @@
         "                 include_top=False,\n",
         "                 input_shape=(150, 150, 3))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
       "source": [
         "conv_base.summary()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +247,7 @@
         "    https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip \\\n",
         "    -O ./data/cats_and_dogs_filtered.zip"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +282,7 @@
       "source": [
         "!ls data"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +323,7 @@
       "source": [
         "!apt-get install tree"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +363,7 @@
       "source": [
         "!tree -d ."
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
       "source": [
         "train_dir"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -489,7 +489,7 @@
         "\t\t\tbatch_size=batch_size)\n",
         "  i=1\n",
         "  for inputs_batch, labels_batch in generator:\n",
-        "    features_batch = conv_base.predict(inputs_batch)\n",
+        "    features_batch = conv_base.predict(inputs_batch) #다른 모델에서 사용되었던 feature를 가져옴 ->전이 모델\n",
         "    features[i*batch_size:(i+1)*batch_size] = features_batch\n",
         "    labels[i*batch_size:(i+1)*batch_size] = labels_batch\n",
         "    i += 1\n",
@@ -512,7 +512,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +558,7 @@
         "    validation_data= (validation_features, validation_labels),\n",
         "    batch_size=batch_size)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -669,7 +669,7 @@
         "plt.plot(epochs, val_loss)\n",
         "plt.title('Training and validation loss')"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -746,10 +746,10 @@
       },
       "cell_type": "code",
       "source": [
-        "# 모델\n",
-        "\n",
+        "# 모델  #fc를 변경하는 코드 \n",
+        " \n",
         "model = models.Sequential()\n",
-        "model.add(conv_base)\n",
+        "model.add(conv_base) #con_base라는 모델을 넣었다.\n",
         "\n",
         "model.add(layers.Flatten())\n",
         "model.add(layers.Dense(256, activation='relu'))\n",
@@ -757,7 +757,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,7 +806,7 @@
       "source": [
         "print(len(model.trainable_weights))"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,7 +869,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -940,7 +940,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -974,6 +974,7 @@
       },
       "cell_type": "code",
       "source": [
+        "#1번같은경우 feature만 가지고 와서 학습시킨거 이기때문에 훈련데이터가 부족해서 과대적합이 일어났지만 2번같은 경우 model.add(conv_base)을 가져와서 학습시켰기 때문에 과대적합이 줄어들었다.\n",
         "model.compile(loss='binary_crossentropy',\n",
         "              optimizer=optimizers.RMSprop(lr=2e-5),\n",
         "              metrics=['acc'])\n",
@@ -986,7 +987,7 @@
         "    validation_data=validation_generator,\n",
         "    validation_steps=50)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1086,7 +1087,7 @@
         "plt.plot(epochs, val_loss)\n",
         "plt.title('Training and validation loss')"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1154,7 +1155,7 @@
       "source": [
         "conv_base.summary()"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1227,6 +1228,7 @@
       },
       "cell_type": "code",
       "source": [
+        "#고양이,개,사자 등의 그림에서 고양이와 개의 data만 뽑아내기 위해 추상적인 것은 빼고 구체적인 것만 바꿔준다.(5번 미세조정)\n",
         "conv_base.trainable = True\n",
         "\n",
         "set_trainable = False\n",
@@ -1275,7 +1277,7 @@
         "    validation_data=validation_generator,\n",
         "    validation_steps=50)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
